--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p class="mb-5">I am a 4th year international economics student from University of Waterloo who is expected to graduate on April 2018. I am specializing in Econometrics with a minor in Computer Science. <br>I am looking for a technical job with a steep learning curve to compensate for my lack of job experience; what I lack in experience, I make up for in breadth, leadership roles and dedication.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="https://fb.com/fahad.alzaman">
+              <a href="https://fb.com/fahad.alzaman" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -87,7 +87,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://twitter.com/fahadalzaman">
+              <a href="https://twitter.com/fahadalzaman" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/falzaman">
+              <a href="https://www.linkedin.com/in/falzaman" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/FahadZ/">
+              <a href="https://github.com/FahadZ/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -171,7 +171,7 @@
 				<div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3"><a href =:"https://www.ontariosolarinitiatives.ca">Ontario Solar Initiatives </a></div>
+              <a href ="https://www.ontariosolarinitiatives.ca"><div class="subheading mb-3">Ontario Solar Initiatives</div> </a>
 							</div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2017</span>
@@ -199,6 +199,8 @@
             </div>
           </div>
         </div>
+				
+
 				
       </section>
 
