--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#activities">Activities &amp; Interests</a>
           </li>
         </ul>
       </div>
@@ -298,7 +298,7 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="activities">
         <div class="my-auto">
           <h2 class="mb-5">Activities &amp; Interests</h2>
           <ul class="fa-ul mb-0">
